--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+
+body {
+  font-family: 'Lato',sans-serif;
+}
+
 .app__container {
   display: flex;
   flex-direction: column;
